Don't let selection mask emit signals until it is a part of the graph

It fixes a crash when truing to duplicate a selection mask
using D&D operation.

BUG:397929